fix(release): escape parentheses in regex pattern for component extraction

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -144,7 +144,7 @@ jobs:
               fi
 
               # Extract component from scope if present
-              if [[ $commit =~ \(([^)]+)\) ]]; then
+              if [[ $commit =~ \\(([^)]+)\\) ]]; then
                 component="${BASH_REMATCH[1]}"
               else
                 component=""
