fix(release): replace regex with bash string operations for component extraction
- Remove problematic escaped parentheses regex pattern
- Use bash string manipulation to extract component from conventional commit scope
- Resolves 'syntax error in conditional expression: unexpected token ')'' at line 35

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -153,10 +153,11 @@ jobs:
               fi
 
               # Extract component from scope if present
-              if [[ $commit =~ \\(([^)]+)\\) ]]; then
-                component="${BASH_REMATCH[1]}"
-              else
-                component=""
+              component=""
+              if [[ $commit == *"("* && $commit == *")"* ]]; then
+                # Extract text between first ( and first )
+                temp="${commit#*(}"
+                component="${temp%%)*}"
               fi
 
               echo "  Type: $type, Component: $component, Breaking: $is_breaking"
