fix(cli): remove default function from GoReleaser config and add retry constant
- Remove unsupported 'default' function from GoReleaser v2 environment variables
- Add MaxRetryAttempts constant for improved error handling
- Environment variables now passed directly from workflow without defaults

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -14,10 +14,10 @@ metadata:
 
 # Environment-based configuration
 env:
-  # Default to false if not set
-  - RELEASE_CLI={{ .Env.RELEASE_CLI | default "false" }}
-  - RELEASE_SDK={{ .Env.RELEASE_SDK | default "false" }}
-  - RELEASE_PLUGINS={{ .Env.RELEASE_PLUGINS | default "false" }}
+  # Environment variables passed from workflow
+  - RELEASE_CLI={{ .Env.RELEASE_CLI }}
+  - RELEASE_SDK={{ .Env.RELEASE_SDK }}
+  - RELEASE_PLUGINS={{ .Env.RELEASE_PLUGINS }}
 
 # Build configuration
 builds:
