--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -75,7 +75,7 @@ archives:
   - id: cli-archive
     # Archive CLI builds
     builds: [cli]
-    name_template: '{{ .ProjectName }}_{{ .Version }}_{{ .Os }}_{{ .Arch }}'
+    name_template: '{{ .ProjectName }}_{{ .Version }}_{{ .OS }}_{{ .Arch }}'
     format: tar.gz
     format_overrides:
       - goos: windows
