--- a/apps/cli/.goreleaser.yml
+++ b/apps/cli/.goreleaser.yml
@@ -1,3 +1,4 @@
+# yaml-language-server: $schema=https://goreleaser.com/static/schema-pro.json
 version: 2
 builds:
   - id: devex
@@ -11,7 +12,6 @@ builds:
       - windows
     goarch:
       - amd64
-      - arm
       - arm64
 archives:
   - id: devex
