fix(cli): add dir to goreleaser build config for proper path resolution

--- a/apps/cli/.goreleaser.yml
+++ b/apps/cli/.goreleaser.yml
@@ -4,6 +4,7 @@ builds:
   - id: devex
     main: ./cmd/main.go
     binary: bin/devex
+    dir: apps/cli
     ldflags:
       - -X main.version={{.Version}}
     goos:
