--- a/apps/registry/package.json
+++ b/apps/registry/package.json
@@ -4,14 +4,13 @@
 	"description": "DevEx Plugin Registry API",
 	"scripts": {
 		"dev": "next dev --turbopack",
-		"prebuild": "prisma generate --no-engine",
 		"build": "next build",
+		"postinstall": "prisma generate --no-engine",
 		"start": "next start",
 		"test": "jest",
 		"test:watch": "jest --watch",
 		"test:coverage": "jest --coverage",
 		"db:generate": "prisma generate --no-engine",
-		"db:generate:dev": "prisma generate",
 		"db:push": "prisma db push",
 		"db:migrate": "prisma migrate dev",
 		"db:deploy": "prisma migrate deploy",
@@ -39,7 +38,7 @@
 		"@testing-library/dom": "^10.4.1",
 		"@testing-library/jest-dom": "^6.4.2",
 		"@testing-library/react": "^16.3.0",
-        "@types/bcrypt": "^6.0.0",
+		"@types/bcrypt": "^6.0.0",
 		"@types/node": "22.18.4",
 		"@types/react": "^19.1.13",
 		"@types/react-dom": "^19.1.9",
