fix(package-manager-flatpak): update tag prefix and add dir for monorepo pattern

--- a/packages/package-manager-flatpak/.goreleaser.yml
+++ b/packages/package-manager-flatpak/.goreleaser.yml
@@ -1,12 +1,14 @@
+# yaml-language-server: $schema=https://goreleaser.com/static/schema-pro.json
 version: 2
 project_name: devex-plugin-package-manager-flatpak
 monorepo:
-  tag_prefix: plugin-package-manager-flatpak-
+  tag_prefix: packages/package-manager-flatpak/v
   dir: packages/package-manager-flatpak
 builds:
   - id: plugin-package-manager-flatpak
     main: .
     binary: devex-plugin-package-manager-flatpak
+    dir: packages/package-manager-flatpak
     env:
       - CGO_ENABLED=0
     goos:
